[gd_scene load_steps=3 format=3 uid="uid://cqcklkrc7l1b1"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_1ncer"]
[ext_resource type="Script" path="res://UI/SessionFinder.gd" id="2_vppf8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ncer")

[node name="SessionFinder" type="Node" parent="."]
script = ExtResource("2_vppf8")

[node name="OnlineState" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Online"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonFindGames" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Play online
"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonPrivateGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start private game
"

[node name="PrivateSelectedColor" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
item_count = 3
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Red"
popup/item_1/id = 1
popup/item_2/text = "Blue"
popup/item_2/id = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonJoinPrivate" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Join private game
"

[node name="JoinGameId" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Private game code"
alignment = 1
max_length = 6

[node name="ButtonRules" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Rules
"

[node name="ButtonExit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonFindGames" to="." method="_on_button_find_games_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/ButtonPrivateGame" to="." method="_on_button_private_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ButtonJoinPrivate" to="." method="_on_button_join_private_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/VBoxContainer/JoinGameId" to="." method="_on_join_game_id_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
